hphp/hack/test/typecheck/records/record_decl_nonexistent_type.php.exp
File "record_decl_nonexistent_type.php", line 4, characters 6-16:
Unbound name: NoSuchClass (an object type) (Naming[2049])
