hphp/hack/test/typecheck/records/record_decl_nonexistent_type.php
<?hh

record A {
  x: NoSuchClass,
}
